--- a/style.css
+++ b/style.css
@@ -40,15 +40,16 @@ body {
 }
 
 .grid-item {
-  margin-bottom: 20px;
-  padding: 20px;
-  border-radius: 5px;
+  margin-bottom: 30px;
+  padding: 35px;
+  border-radius: 10px;
   box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.3);
-  font-size: 13px;
+  font-size: 15px;
 }
 
 .grid-item p {
   opacity: 70%;
+  line-height: 1.5;
 }
 
 .grid-item h4 {
@@ -92,7 +93,7 @@ body {
   }
 
   #testimonial-grid-container {
-    max-width: 900px;
+    max-width: 1300px;
     margin: 0 auto;
   }
 
@@ -115,7 +116,7 @@ body {
   }
 
   #main-left .grid-item {
-    margin-right: 15px;
+    margin-right: 30px;
   }
 
   #top,
